--- a/eventex/core/templates/index.html
+++ b/eventex/core/templates/index.html
@@ -108,9 +108,8 @@
             <div class="register row">
                 <div class="text-align-center row desktop-12 padding-top-2 min-h-14 container">
                 	<h2>Inscrição</h2>
-                	<h3>Inscrições em breve!</h3>
-                    <p>Fique à vontade para entrar em contato com a gente.<br>Teremos prazer em responder quaisquer dúvidas.</p>
-                	<a class="btn-basic btn-blue" href="mailto:contato@eventex.com.br">contato@eventex.com.br</a>
+                	<h3>Inscrições abertas!</h3>
+                	<a class="btn-basic btn-blue" href="/inscricao/">Inscreva-se já!</a>
                 </div>
             </div>
         </section>
