--- a/eventex/subscriptions/templates/subscriptions/subscription_form.html
+++ b/eventex/subscriptions/templates/subscriptions/subscription_form.html
@@ -1,106 +1,43 @@
-{% load static %}
-<!DOCTYPE html>
-<html>
-	<head>
-        <title>Eventex - O maior encontro hacker do mundo!</title>
+{% extends 'base.html' %}
 
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <meta name="description" content="Eventex - O maior encontro hacker do mundo!">
-        <meta name="author" content="wttd">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-
-        <!-- Favicon -->
-        <link rel="shortcut icon" href="{% static 'img/favicon.ico' %}">
-
-        <!-- CSS -->
-        <link rel="stylesheet" href="{% static 'css/font-awesome.min.css' %}">
-        <link rel="stylesheet" href="{% static 'css/basalstyle/style.min.css' %}">
-        <link rel="stylesheet" href="{% static 'css/main.css' %}">
-
-        <link href='http://fonts.googleapis.com/css?family=Economica:400,700' rel='stylesheet' type='text/css'>
-
-        <style>
-            .alert{
-                padding:0 15px;
-                margin-bottom:1rem;
-                border:1px solid transparent;
-                border-radius:25rem;
-            }
-            .alert p{
-                padding: 7px 0 7px;
-
-            }
-            .alert.success{
-                color: #3c763d;
-                background-color: #dff0d8;
-                border-color: #d0e9c6;
-            }
-        </style>
-	</head>
-
-	<body>
-        <div class="header-frame row">
-            <header class="header header-inline min-h-3 row desktop-12 container" role="banner">
-
-                <div class="site-logo">
-                    <h1><a href="/" rel="home">Eventex</h1>
-                    <p class="site-description screen-reader-only">O maior encontro hacker do mundo!</p>
+{% block content %}
+<!-- OVERVIEW -->
+<section>
+    <div class="content row padding-bottom-3 desktop-12 container">
+        <h1>Formulário de Inscrição</h1>
+        <div class="desktop-6">
+            {% if messages %}
+                {% for message in messages %}
+                    <div class="alert success">
+                        <p>{{ message }}</p>
+                    </div>
+                {% endfor %}
+            {% endif %}
+            <form action="." method="post">
+                {% csrf_token %}
+                <div class="form-row label-block input-text">
+                    <label for="{{ form.name.id_for_label }}">{{ form.name.label }}</label>
+                    {{ form.name.errors }}
+                    {{ form.name }}
                 </div>
-
-                <nav class="nav-inline" role="navigation">
-                    <a href="javascript:void(0);" class="nav-mobile"><i class="fa fa-bars"></i></a>
-                    <ul>
-                        <li><a data-scroll href="/#overview">Conferência</a></li>
-                        <li><a data-scroll href="/#sponsors">Patrocinadores</a></li>
-                        <li><a data-scroll href="/#register">Inscrição</a></li>
-                        <li><a data-scroll href="/#venue">Local</a></li>
-                    </ul>
-                </nav>
-
-            </header>
+                <div class="form-row label-block input-text">
+                    <label for="{{ form.cpf.id_for_label }}">{{ form.cpf.label }}</label>
+                    {{ form.cpf.errors }}
+                    {{ form.cpf }}
+                </div>
+                <div class="form-row label-block input-text">
+                    <label for="{{ form.email.id_for_label }}">{{ form.email.label }}</label>
+                    {{ form.email.errors }}
+                    {{ form.email }}
+                </div>
+                <div class="form-row label-block input-text">
+                    <label for="{{ form.phone.id_for_label }}">{{ form.phone.label }}</label>
+                    {{ form.phone.errors }}
+                    {{ form.phone }}
+                </div>
+                <p class="btn-row"><input type="submit" value="Enviar!"/></p>
+            </form>
         </div>
-
-
-        <!-- OVERVIEW -->
-        <section>
-        	<div class="content row padding-bottom-3 desktop-12 container">
-                <h1>Formulário de Inscrição</h1>
-                <div class="desktop-6">
-                    {% if messages %}
-                        {% for message in messages %}
-                            <div class="alert success">
-                                <p>{{ message }}</p>
-                            </div>
-                        {% endfor %}
-                    {% endif %}
-                    <form action="." method="post">
-                        {% csrf_token %}
-                        <div class="form-row label-block input-text">
-                            <label for="{{ form.name.id_for_label }}">{{ form.name.label }}</label>
-                            {{ form.name.errors }}
-                            {{ form.name }}
-                        </div>
-                        <div class="form-row label-block input-text">
-                            <label for="{{ form.cpf.id_for_label }}">{{ form.cpf.label }}</label>
-                            {{ form.cpf.errors }}
-                            {{ form.cpf }}
-                        </div>
-                        <div class="form-row label-block input-text">
-                            <label for="{{ form.email.id_for_label }}">{{ form.email.label }}</label>
-                            {{ form.email.errors }}
-                            {{ form.email }}
-                        </div>
-                        <div class="form-row label-block input-text">
-                            <label for="{{ form.phone.id_for_label }}">{{ form.phone.label }}</label>
-                            {{ form.phone.errors }}
-                            {{ form.phone }}
-                        </div>
-                        <p class="btn-row"><input type="submit" value="Enviar!"/></p>
-                    </form>
-                </div>
-            </div>
-        </section>
-
-    </body>
-</html>
+    </div>
+</section>
+{% endblock content %}
