Extrai urls hardcoded

--- a/eventex/core/templates/index.html
+++ b/eventex/core/templates/index.html
@@ -37,7 +37,7 @@
             <header class="header header-inline min-h-3 row desktop-12 container" role="banner">
 
                 <div class="site-logo">
-                    <h1><a href="/" rel="home">Eventex</a></h1>
+                    <h1><a href="{% url 'home' %}" rel="home">Eventex</a></h1>
                     <p class="site-description screen-reader-only">O maior encontro hacker do mundo!</p>
                 </div>
 
@@ -109,7 +109,7 @@
                 <div class="text-align-center row desktop-12 padding-top-2 min-h-14 container">
                 	<h2>Inscrição</h2>
                 	<h3>Inscrições abertas!</h3>
-                	<a class="btn-basic btn-blue" href="/inscricao/">Inscreva-se já!</a>
+                	<a class="btn-basic btn-blue" href="{% url 'subscriptions:new' %}">Inscreva-se já!</a>
                 </div>
             </div>
         </section>
