--- a/eventex/core/templates/index.html
+++ b/eventex/core/templates/index.html
@@ -34,24 +34,7 @@
 	<body>
 
         <div class="header-frame header-frame-absolute  row">
-            <header class="header header-inline min-h-3 row desktop-12 container" role="banner">
-
-                <div class="site-logo">
-                    <h1><a href="{% url 'home' %}" rel="home">Eventex</a></h1>
-                    <p class="site-description screen-reader-only">O maior encontro hacker do mundo!</p>
-                </div>
-
-                <nav class="nav-inline" role="navigation">
-                    <a href="javascript:void(0);" class="nav-mobile"><i class="fa fa-bars"></i></a>
-                    <ul>
-                        <li><a data-scroll href="#overview">Conferência</a></li>
-                        <li><a data-scroll href="#sponsors">Patrocinadores</a></li>
-                        <li><a data-scroll href="#register">Inscrição</a></li>
-                        <li><a data-scroll href="#venue">Local</a></li>
-                    </ul>
-                </nav>
-
-            </header>
+            {% include 'nav.html' %}
         </div>
 
       	<!-- TOP -->
@@ -69,6 +52,18 @@
             	<h2>A Conferência</h2>
                 <p class="lead">A maior reunião de hackers do mundo.<br>Reunindo profissionais e entusiastas dos quatro <br>cantos do planeta, o <em>Eventex</em> é o lugar onde você precisa estar.</p>
             	<p><a class="btn-basic btn-blue" data-scroll href="#register">Garanta a sua vaga!</a></p>
+            </div>
+        </section>
+
+        <section id="speakers">
+            <div class="speakers text-align-center row desktop-8 padding-bottom-2 container">
+                <h2>Palestrante Convidados</h2>
+                {% for speaker in speakers %}
+                    <div class="desktop-4">
+                        <img src="{{ speaker.photo }}" alt="">
+                        <h4>{{ speaker.name }}</h4>
+                    </div>
+                {% endfor %}
             </div>
         </section>
 
