--- a/eventex/core/templates/index.html
+++ b/eventex/core/templates/index.html
@@ -61,7 +61,7 @@
                 {% for speaker in speakers %}
                     <div class="desktop-4">
                         <img src="{{ speaker.photo }}" alt="">
-                        <h4>{{ speaker.name }}</h4>
+                        <h4><a href="{{ speaker.get_absolute_url }}">{{ speaker.name }}</a></h4>
                     </div>
                 {% endfor %}
             </div>
